fixing security config and account page